packages/dashboard-frontend/src/Layout/ErrorReporter/Issue/index.module.css
/*
 * Copyright (c) 2018-2026 Red Hat, Inc.
 * This program and the accompanying materials are made
 * available under the terms of the Eclipse Public License 2.0
 * which is available at https://www.eclipse.org/legal/epl-2.0/
 *
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *   Red Hat, Inc. - initial API and implementation
 */

.messageContainer {
  width: 33vw;
  min-width: 300px;
}

.warningIcon {
  margin-right: 20px;
  color: var(--pf-t--global--icon--color--status--warning--default);
}

.dangerIcon {
  margin-right: 20px;
  color: var(--pf-t--global--icon--color--status--danger--default);
}

.infoIcon {
  margin-right: 20px;
  color: var(--pf-t--global--icon--color--status--info--default);
}

.keybinding {
  margin: 0 3px;
  padding: 3px;

  font-weight: bold;

  border: 1px solid #ccc;
  border-radius: 3px;
  box-shadow: inset -0.125rem -0.125rem 0.25rem -0.0625rem rgb(3 3 3 / 16%);
}

.errorMessage {
  padding: 5px;
  white-space: pre-wrap;
  background-color: var(--pf-t--global--color--nonstatus--red--default);
  border-radius: 3px;
}

